--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,2 +1,37 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
+.header {
+    padding-top: 40px;
+    font-family: "futura-pt",sans-serif;
+    font-weight: 800;
+}
 
+.header small {
+    display: block;
+    width: 270px;
+    margin: 0 auto;
+    font-family: 'PF DinDisplay Pro',sans-serif;
+    font-size: 18px;
+    text-transform: uppercase;
+    font-weight: 400;
+}
+
+.timer-loader {
+    margin-top: 20px;
+}
+
+.timer-loader:not(:required) {
+    border: 6px solid #ff4700 !important;
+}
+
+.timer-loader:not(:required)::before, .timer-loader:not(:required)::after {
+    background-color: #ff4700 !important;
+}
+
+img.profile-picture {
+    border: 2px solid white;
+    width: 100px;
+}
+
+.centered {
+    text-align: center;
+}
